added color toggle

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #f4f4f4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,4 +30,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.black {
+  background-color: black !important;
 }
