--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,14 @@
 
 .App-header {
   background-color: #f4f4f4;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #444;
+  
 }
 
 .App-link {
@@ -34,4 +35,21 @@
 
 .black {
   background-color: black !important;
+}
+
+form {
+  margin-bottom: 10%;
+}
+
+.text-input{
+  font-size: 1.2rem;
+  padding: 1.4%;
+}
+
+.btn {
+  background: #444;
+  font-size: 1.2rem;
+  color: white;
+  border: none;
+  padding: 2%;
 }
